--- a/crates/generator/Cargo.toml
+++ b/crates/generator/Cargo.toml
@@ -14,7 +14,7 @@ gw-store = { path = "../store" }
 gw-traits = { path = "../traits" }
 anyhow = "1.0"
 blake2b-rs = "0.2"
-ckb-vm = { git = "https://github.com/nervosnetwork/ckb-vm.git", tag = "0.19.1", features = ["detect-asm"] }
+ckb-vm = { git = "https://github.com/nervosnetwork/ckb-vm.git", tag = "0.19.1" }
 thiserror = "1.0"
 lazy_static = "1.4"
 secp256k1 = { version = "0.20", features = ["recovery"] }
