--- a/crates/jsonrpc-types/Cargo.toml
+++ b/crates/jsonrpc-types/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
-faster-hex = "0.4"
+hex = "0.4"
 gw-types = { path = "../types" }
 gw-chain = { path = "../chain" }
 gw-generator = { path = "../generator" }
